--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "leancloud-storage": "^2.1.1",
     "muse-ui": "^2.0.0-rc.2",
     "vue": "^2.0.1",
     "vue-resource": "^1.0.3"
